logs/django-pytds.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_pytds'...
Compiling './lib/python3.5/site-packages/django_pytds/base.py'...
***   File "./lib/python3.5/site-packages/django_pytds/base.py", line 160
    except Database.IntegrityError, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_pytds/creation.py'...
***   File "./lib/python3.5/site-packages/django_pytds/creation.py", line 57
    print "Skipping Test DB creation"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_pytds/models'...
Listing './lib/python3.5/site-packages/django_pytds/sql_app'...
Listing './lib/python3.5/site-packages/django_pytds/sql_app/management'...
Listing './lib/python3.5/site-packages/django_pytds/sql_app/management/commands'...
Listing './lib/python3.5/site-packages/django_pytds-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytds'...
Listing './lib/python3.5/site-packages/python_tds-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
